fix: tag alignment

--- a/client/src/templates/Introduction/intro.css
+++ b/client/src/templates/Introduction/intro.css
@@ -13,7 +13,6 @@
 }
 
 .block-label {
-  align-self: start;
   height: fit-content;
   width: fit-content;
   padding: 1px 6px 2px;
